# yt-catalog

./: .env.example  .gitignore  README.md  api_scraper.py  benchmark.py  cataloger.py  categorize_run.py  categorizer.py  config.py  enricher.py  install.sh  models.py  pyproject.toml  scraper.py  utils.py  vault_generator.py
docs/specs/: 2026-03-16-youtube-notification-cataloger-design.md
plan/: 2026-03-16-youtube-cataloger-implementation.md
tests/: test_ai_provider.py  test_api_scraper.py  test_cataloger.py  test_categorizer.py  test_config.py  test_enricher.py  test_eval.py  test_integration.py  test_models.py  test_oauth.py  test_run_state.py  test_scraper.py  test_utils.py  test_vault_generator.py
vault/: graph-tags.md
vault/.obsidian/: graph.json  workspace.json
yt_catalog/: __main__.py  ai_provider.py  api_scraper.py  cataloger.py  categorizer.py  cli.py  enricher.py  models.py  oauth.py  rule_categorizer.py  run_state.py  scraper.py  utils.py  vault_generator.py
yt_catalog/commands/: discover.py  run.py  setup.py
